<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>
    <string name="notification_channel_id" translatable="false">loadapp_channel</string>
    <string name="notification_channel_name" translatable="false">loadapp</string>

    <string name="button_name">Click me</string>
    <string name="button_default">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_button">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_button">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_button">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    
    <string name="glide_repo">https://github.com/bumptech/glide</string>
    <string name="loadapp_repo">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter</string>
    <string name="retrofit_repo">https://github.com/square/retrofit</string>
    <string name="select_repo">Nothing selected, please select a repo to download</string>
    <string name="detail_button">OK</string>
    <string name="file_name">File name</string>
    <string name="status_textview">Status</string>
    <string name="status">SUCCESS</string>
    <string name="notification_action">Check download status</string>
</resources>
