<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/cloud_download_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#C6DAD8"
        android:src="@drawable/ic_baseline_cloud_download_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/loading_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cloud_download_image">

        <RadioButton
            android:id="@+id/glide_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glide_button"
            android:onClick="onRadioButtonClicked"
            android:textSize="@dimen/radio_button_text_size" />

        <RadioButton
            android:id="@+id/loadapp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:text="@string/loadapp_button"
            android:onClick="onRadioButtonClicked"
            android:textSize="@dimen/radio_button_text_size" />

        <RadioButton
            android:id="@+id/retrofit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/radio_button_text_size"
            android:onClick="onRadioButtonClicked"
            android:text="@string/retrofit_button" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/loading_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:backgroundColor="@color/button_color"
        app:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>